--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Dearmyhealth</string>
+
+    <string name="change_account">계정변경</string>
+    <string name="login">로그인</string>
+    <string name="logout">로그아웃</string>
+    <string name="my_page">마이 페이지</string>
+    <string name="setting">설정</string>
+    <string name="faq">FAQ</string>
+
+    <string name="navigation_drawer_open">navigation open</string>
+    <string name="navigation_drawer_close">navigation close</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
