--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Dearmyhealth</string>
+    <string name="app_name">DearMyHealth</string>
+    <string name="app_slogan">care for myself</string>
 
     <string name="change_account">계정변경</string>
     <string name="login">로그인</string>
@@ -10,6 +11,11 @@
 
     <string name="navigation_drawer_open">navigation open</string>
     <string name="navigation_drawer_close">navigation close</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Home">홈</string>
+    <string name="Diet">식단</string>
+    <string name="Department">분과</string>
+    <string name="Dosage">복약</string>
+    <string name="Activity">운동</string>
 </resources>
