--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="Department">분과</string>
     <string name="Dosage">복약</string>
     <string name="Activity">운동</string>
+
+    <string name="sample_notice2">건강 소식! 세상에 미나리가 너무 좋다는 소식이?</string>
 </resources>
