FEAT: bottom_nav 색상 조정, BottomSheetAccountDialogFragment 추가
1. bottom_nav in activity_main.xml 색상을 배경색과 동일하게 조정

2. 각 fragment에 동일한 notice 표시를 위해 view_notices.xml 분리

3. BottomSheetAccountDialogFragment 추가
  NavigationView 내 계정변경 버튼에 의한 Dialog
  view_account.xml 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="Dosage">복약</string>
     <string name="Activity">운동</string>
 
+    <string name="login_another_account">다른 계정으로 로그인</string>
     <string name="sample_notice2">건강 소식! 세상에 미나리가 너무 좋다는 소식이?</string>
 </resources>
