--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,14 @@
 
     <string name="login_another_account">다른 계정으로 로그인</string>
     <string name="sample_notice2">건강 소식! 세상에 미나리가 너무 좋다는 소식이?</string>
+
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_id">ID</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
