FEAT: DietTodayFragment_skeleton UI 생성
issue: chipGroup, chip 컴포넌트의 사용 조건이 Material 테마를 사용하는 것.
현재 AppCompat 테마를 사용중이어서 해당 fragment에 진입시 crash가 발생함.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
     <string name="fat">지방</string>
     <string name="cholesterol">콜레스테롤</string>
 
+    <string name="default_nutrition_chip">칼로리: 0kcal</string>
+    <string name="default_diet_description">맛있는 밥!</string>
+
 </resources>
