Change: connect exercise with home, modify UI
1. connect menu-navigation id chain
    menu_bottom_nav, nav_graph, nav_act file is affected.

2. adjust UI structure
    build exerciseType view into a layout.
    and other UI position adjusted.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="login_failed">"Login failed"</string>
     <!-- Exercise -->
     <string name="exercise_details">운동 상세 정보</string>
+    <string name="no_exercise_message">오늘 운동 정보가 없어요.\n운동 정보를 추가해볼까요?</string>
     <string name="exercise_time">운동 시간</string>
     <string name="exercise_time_ex">00:41:00</string>
     <string name="exercise_distance">거리</string>
