--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="search">검색</string>
     <string name="save">저장</string>
     <string name="edit">수정</string>
+    <string name="cancel">취소</string>
+    <string name="apply">적용</string>
 
     <string name="navigation_drawer_open">navigation open</string>
     <string name="navigation_drawer_close">navigation close</string>
