Feat: 현재 운동 설정/종료 UI 구현
- viewModel을 통해 가져온 운동 목록에서 선택한 아이템을 viewModel이 저장하도록 구현

- 운동 종료 버튼 추가 및 viewModel에 운동 종료 함수 추가

TODO HealthConnect 구현이 우선 되어야 할듯.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
     <!-- Exercise -->
     <string name="exercise_details">운동 상세 정보</string>
     <string name="no_exercise_message">오늘 운동 정보가 없어요.\n운동 정보를 추가해볼까요?</string>
@@ -68,6 +69,8 @@
     <string name="exercise_hiking">등산</string>
     <string name="exercise_bicycle">자전거</string>
     <string name="exercise_swim">수영</string>
+    <string name="exercise_finish">운동 종료하기</string>
+
     <!-- Diet -->
     <string name="breakfast">아침</string>
     <string name="calory">칼로리</string>
