Feat: HealthConnect 버전업, HealthConnectManager 추가
# HealthConnect 버전 1.0.0-alpha11 -> 1.1.0-alpha07

# HealthConnectManager 추가
HealthConnect 권한 요청 화면을 띄우고, 데이터 I/O를 담당하도록 함.

# DeptFragment와 하위 Fragments 간의 상호작용
DeptFragment에서 4개의 각 fragment에 대해 동일한 방법으로 통제하도록 Fragment 코드를 변경함.

  ## 하위 Fragments를 childFragmentManager가 관리하도록 변경.
    뒤로가기 시 바로 홈으로 가기 위해 backstack에 추가 하지 않음.

  ## VitalViewModel 공유
     하위 Fragments가 DeptFragment를 통해 같은 viewModel을 사용하도록 viewModels()을 사용해 인스턴스 획득
     HealthConnectManager 권한 관리를 하나의 ViewModel에서 하기 위함.
# 걸음수 차트 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <!-- Health Connect -->
     <string name="health_connect_package">com.google.android.apps.healthdata</string>
 
+    <!-- chart -->
+    <string name="range_a_day">1일</string>
+    <string name="range_a_week">1주</string>
+    <string name="range_a_month">1개월</string>
+    <string name="range_a_year">1년</string>
+
     <string name="Dosage_alarm">복약 알림</string>
     <string name="Dosage_manage">복약 일정 관리</string>
     <string name="Dosage_schedule">복약 일정</string>
@@ -55,6 +61,12 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
+
+    <!-- BPM -->
+    <string name="unit_temperature">ºC</string>
+    <string name="add_data">데이터 추가</string>
+
     <!-- Exercise -->
     <string name="exercise_details">운동 상세 정보</string>
     <string name="exercise_time">운동 시간</string>
