--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <!-- BPM -->
     <string name="unit_temperature">ºC</string>
     <string name="add_data">데이터 추가</string>
+    <string name="hour">시간</string>
+    <string name="minute">분</string>
 
     <!-- Exercise -->
     <string name="exercise_details">운동 상세 정보</string>
