--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
 
     <!-- BPM -->
     <string name="unit_temperature">ºC</string>
+    <string name="unit_killogram">kg</string>
     <string name="add_data">데이터 추가</string>
     <string name="hour">시간</string>
     <string name="minute">분</string>
