--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
 
 
     <!-- BPM -->
+    <string name="unit_bpm">bpm</string>
     <string name="unit_temperature">ºC</string>
     <string name="unit_killogram">kg</string>
     <string name="add_data">데이터 추가</string>
